# meche-copilot

./: .dockerignore  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cli-config.yaml  dev.Dockerfile  pyproject.toml  pytest.ini  session-config.yaml
.devcontainer/: devcontainer.json  docker-compose.yaml
docs/api_reference/: conf.py  requirements.txt
meche_copilot/: get_comparison_results.py  get_eq_specs_and_comps.py  get_equipment_results.py  schemas.py
meche_copilot/chains/: read_design_chain.py
meche_copilot/chains/helpers/: get_eq_schedules.py  get_token_count.py  mechanical_schedule_table_to_df.py
meche_copilot/cli/: cli.py  fillout_ws.py  generate_annots.py  generate_report.py  generate_ws.py
meche_copilot/pdf_helpers/: add_comment_to_text.py  add_highlight_to_text.py  flip_origin_tl_to_bl.py  get_page_from_sheet.py  get_pages_from_text.py  get_sheet_from_page.py  get_table_rect.py  get_text_bounding_box.py  open_pdf.py  schemas.py  table_to_df.py  visualize.py
meche_copilot/utils/: chunk_dataframe.py  clean.py  config.py  converters.py  envars.py  num_tokens_from_string.py
tests/: data.py  project_folder_test.py
tests/evals/: analyze_specs_chain_eval.ipynb  camelot_eval.ipynb  helpers.py  prompt_tests_temp.py  read_design_chain_eval.ipynb  read_submittal_chain_eval.ipynb
tests/evals/prelim_evals/: chatgpt_plugins.ipynb  read_schedules_using_ocr.ipynb  read_schedules_using_parsed_pdfs.ipynb  read_submittals_using_parsed_pdf.ipynb  select_vectorstore.ipynb
tests/unit_tests/: conftest.py
tests/unit_tests/chains/: analyze_specs_chain_test.py  get_lookup_specs_chain_test.py  pdf_table_extr.py  read_design_chain_test.py  read_submittal_chain_test.py  specs_retreiver_test.py
tests/unit_tests/copilot/: fillout_ws_test.py  generate_annots_test.py  generate_report_test.py  generate_ws_test.py  get_data_test.py  get_equipment_results_test.py
tests/unit_tests/pdf_helpers/: add_comment_to_text_test.py  add_highlight_to_text_test.py  get_page_from_sheet_test.py  get_sheet_from_page_test.py  open_pdf_test.py
tests/unit_tests/utils/: chunk_dataframe_test.py
